--- a/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
@@ -48,14 +48,14 @@
                         </constraints>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WIz-YW-74T">
-                        <rect key="frame" x="167.5" y="65.5" width="20" height="20"/>
+                        <rect key="frame" x="100.5" y="65.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="cpA-Yv-AdE"/>
                             <constraint firstAttribute="width" constant="20" id="gjQ-eJ-PDL"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wzr-xZ-7OD">
-                        <rect key="frame" x="129" y="55.5" width="32.5" height="36"/>
+                        <rect key="frame" x="62" y="55.5" width="32.5" height="36"/>
                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -67,24 +67,31 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期:2022年3月28日至2022年3月31日" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsh-lS-MfQ">
-                        <rect key="frame" x="85" y="99.5" width="228" height="14.5"/>
+                        <rect key="frame" x="73.5" y="102" width="228" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请在有效期内充值满888USDT再领取红包,888倍流水取款,逾期作废" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF7-8s-KQf">
-                        <rect key="frame" x="19" y="124" width="337.5" height="13.5"/>
+                        <rect key="frame" x="19" y="126.5" width="337.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="0.56470588235294117" green="0.56470588235294117" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2DZ-RK-Bzx">
+                        <rect key="frame" x="182.5" y="140" width="10" height="10"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="10" id="MM6-SK-rGU"/>
+                        </constraints>
+                    </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDr-d7-E2A">
-                        <rect key="frame" x="87.5" y="145" width="200" height="44"/>
+                        <rect key="frame" x="87.5" y="150" width="200" height="44"/>
                         <color key="backgroundColor" systemColor="linkColor"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="eDr-d7-E2A" secondAttribute="height" multiplier="50:11" id="jwK-IP-Gk9"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="立即领取">
                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -99,30 +106,54 @@
                             <action selector="tapMoreAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0xA-AX-fou"/>
                         </connections>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Mg-Hz-YJv">
+                        <rect key="frame" x="182.5" y="194" width="10" height="10"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="10" id="knL-MO-c2M"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IcX-fT-nl5">
+                        <rect key="frame" x="182.5" y="116.5" width="10" height="10"/>
+                        <viewLayoutGuide key="safeArea" id="llB-xr-2gs"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="10" id="Use-o2-pmL"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7.5" id="1J2-p6-cGP"/>
+                    <constraint firstItem="eDr-d7-E2A" firstAttribute="top" secondItem="2DZ-RK-Bzx" secondAttribute="bottom" id="1Qe-lL-AXz"/>
                     <constraint firstItem="bRk-6Z-qmx" firstAttribute="leading" secondItem="UfR-rC-aDj" secondAttribute="leading" constant="12" id="4k1-RV-B8Q"/>
-                    <constraint firstItem="WIz-YW-74T" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-10" id="5Y3-rK-SNm"/>
+                    <constraint firstItem="1Mg-Hz-YJv" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="78X-WX-MeS"/>
+                    <constraint firstItem="IcX-fT-nl5" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.0498753" id="Bpp-E3-4ka"/>
                     <constraint firstAttribute="bottom" secondItem="UfR-rC-aDj" secondAttribute="bottom" constant="7" id="EXF-3g-ru0"/>
+                    <constraint firstItem="2DZ-RK-Bzx" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.0498753" id="Fbx-Ux-9d1"/>
                     <constraint firstItem="bRk-6Z-qmx" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.109726" id="Had-5Q-bXY"/>
-                    <constraint firstItem="TEH-US-3Pd" firstAttribute="leading" secondItem="WIz-YW-74T" secondAttribute="trailing" constant="20" id="PPr-dh-kl0"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="eDr-d7-E2A" secondAttribute="bottom" constant="15" id="PmR-Qp-UtP"/>
-                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="top" secondItem="WIz-YW-74T" secondAttribute="bottom" constant="14" id="QPI-YG-5zl"/>
+                    <constraint firstItem="cF7-8s-KQf" firstAttribute="top" secondItem="IcX-fT-nl5" secondAttribute="bottom" id="I7q-V5-Uif"/>
+                    <constraint firstItem="2DZ-RK-Bzx" firstAttribute="top" secondItem="cF7-8s-KQf" secondAttribute="bottom" id="OY0-2v-orT"/>
                     <constraint firstAttribute="trailing" secondItem="UfR-rC-aDj" secondAttribute="trailing" constant="15" id="QYO-ne-MNn"/>
                     <constraint firstItem="eDr-d7-E2A" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Toz-Np-d34"/>
                     <constraint firstItem="bRk-6Z-qmx" firstAttribute="top" secondItem="UfR-rC-aDj" secondAttribute="top" constant="8" id="YRQ-I7-Xak"/>
                     <constraint firstItem="cF7-8s-KQf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="aQZ-0Z-7BR"/>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="bau-Im-Bce"/>
                     <constraint firstItem="TEH-US-3Pd" firstAttribute="bottom" secondItem="wzr-xZ-7OD" secondAttribute="bottom" id="bzx-20-bWp"/>
-                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="trailing" secondItem="TEH-US-3Pd" secondAttribute="trailing" id="dZL-49-hBk"/>
+                    <constraint firstItem="wzr-xZ-7OD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="42" id="diD-j0-KD4"/>
+                    <constraint firstItem="2DZ-RK-Bzx" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="eQt-Mx-fqI"/>
+                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="fWT-iG-aSJ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="TEH-US-3Pd" secondAttribute="trailing" constant="42" id="gfb-JX-dLC"/>
                     <constraint firstItem="eDr-d7-E2A" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.219451" id="hWr-B7-yrg"/>
+                    <constraint firstItem="IcX-fT-nl5" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="iON-ku-M7F"/>
                     <constraint firstItem="WIz-YW-74T" firstAttribute="top" secondItem="bRk-6Z-qmx" secondAttribute="bottom" constant="28" id="io5-Zn-76H"/>
+                    <constraint firstItem="IcX-fT-nl5" firstAttribute="top" secondItem="nsh-lS-MfQ" secondAttribute="bottom" id="jtO-MB-ZeP"/>
+                    <constraint firstItem="1Mg-Hz-YJv" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.0498753" id="k9B-df-OBL"/>
                     <constraint firstItem="wzr-xZ-7OD" firstAttribute="bottom" secondItem="WIz-YW-74T" secondAttribute="bottom" constant="6" id="ph2-mX-R4i"/>
                     <constraint firstItem="wzr-xZ-7OD" firstAttribute="trailing" secondItem="WIz-YW-74T" secondAttribute="leading" constant="-6" id="sLz-XC-KL9"/>
-                    <constraint firstItem="cF7-8s-KQf" firstAttribute="top" secondItem="nsh-lS-MfQ" secondAttribute="bottom" constant="10" id="tNt-4g-uZP"/>
                     <constraint firstItem="TEH-US-3Pd" firstAttribute="width" secondItem="UfR-rC-aDj" secondAttribute="width" multiplier="0.305797" id="vOk-K3-K7G"/>
+                    <constraint firstItem="1Mg-Hz-YJv" firstAttribute="top" secondItem="eDr-d7-E2A" secondAttribute="bottom" id="wDg-Ip-dyf"/>
+                    <constraint firstItem="1Mg-Hz-YJv" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="yhj-5i-w2h"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
