--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
@@ -353,8 +353,7 @@
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Qne-sW-f5Y" secondAttribute="height" multiplier="320:54" id="nth-vM-nfO"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".PingFang SC" pointSize="16"/>
-                                    <inset key="titleEdgeInsets" minX="0.0" minY="-16" maxX="0.0" maxY="0.0"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="18"/>
                                     <connections>
                                         <action selector="confirm:" destination="-1" eventType="touchUpInside" id="NiE-fZ-HCr"/>
                                     </connections>
