--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -19,6 +19,7 @@
                 <outlet property="hisOrderNoLB" destination="6Mj-EM-ywj" id="aT1-EM-UVg"/>
                 <outlet property="hisOrderStackView" destination="Msa-M2-rKP" id="Ljg-6C-rxB"/>
                 <outlet property="historyView" destination="XfX-y3-blh" id="vh8-RJ-kou"/>
+                <outlet property="historyViewHeight" destination="51m-YZ-toh" id="av6-2J-B0Z"/>
                 <outlet property="sumitBtn" destination="az0-7H-f0l" id="z9F-8V-hpw"/>
                 <outlet property="tableView" destination="RxF-ga-guY" id="3Zw-aD-Kh8"/>
                 <outlet property="tableViewTop" destination="Ndn-h9-gWH" id="rsK-11-EcQ"/>
@@ -117,8 +118,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XfX-y3-blh">
                     <rect key="frame" x="0.0" y="214" width="414" height="89"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Msa-M2-rKP">
-                            <rect key="frame" x="20" y="23" width="65" height="43.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Msa-M2-rKP">
+                            <rect key="frame" x="20" y="26.5" width="65" height="36.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款订单" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDV-a7-cTH">
                                     <rect key="frame" x="0.0" y="0.0" width="65" height="17"/>
@@ -127,15 +128,15 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Axxxxxxxx" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mj-EM-ywj">
-                                    <rect key="frame" x="0.0" y="25" width="65" height="18.5"/>
+                                    <rect key="frame" x="0.0" y="18" width="65" height="18.5"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="13"/>
                                     <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="L5k-sV-LsE">
-                            <rect key="frame" x="105" y="23" width="48" height="43.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="L5k-sV-LsE">
+                            <rect key="frame" x="105" y="26.5" width="48" height="36.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款金额" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xb6-wI-CUT">
                                     <rect key="frame" x="0.0" y="0.0" width="48" height="17"/>
@@ -144,7 +145,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abx-lJ-nLQ">
-                                    <rect key="frame" x="0.0" y="25" width="48" height="18.5"/>
+                                    <rect key="frame" x="0.0" y="18" width="48" height="18.5"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="13"/>
                                     <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -160,21 +161,10 @@
                                         <constraint firstAttribute="height" constant="32" id="FCZ-y3-7Az"/>
                                         <constraint firstAttribute="width" constant="90" id="oBL-XM-QYZ"/>
                                     </constraints>
-                                    <color key="tintColor" red="1" green="0.92156862750000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain">
-                                        <attributedString key="attributedTitle">
-                                            <fragment content="确认到账">
-                                                <attributes>
-                                                    <color key="NSColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <font key="NSFont" size="13" name="PingFangSC-Semibold"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
-                                    </buttonConfiguration>
-                                    <connections>
-                                        <action selector="confirmBtnClicked:" destination="-1" eventType="touchUpInside" id="bGT-R1-ZSF"/>
-                                    </connections>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="13"/>
+                                    <color key="tintColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="确认到账"/>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbk-f5-ESp">
                                     <rect key="frame" x="0.0" y="40" width="90" height="32"/>
